Added css - not ended

--- a/lesson2_page2.html
+++ b/lesson2_page2.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Урок 2</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css"/>
 </head>
 <body>
 <h1>ГБУ НИИ ЧАВО</h1>
 <hr />
-<h3>Об институре</h3>
+<h3>Об институте</h3>
 <a target="_blank" href="http://localhost:63342/html/lesson2.html?_ijt=7e0td1vhtj8mo1aioe8mnlng61&_ij_reload=RELOAD_ON_SAVE">
 <h3>Карьера</h3></a>
 <h3>Новости</h3>
@@ -35,7 +36,7 @@
     <img src="4.jpg"/>
 </div>
 <h4>У нас открыты следующие вакансии:</h4>
-<table border="1">
+<table border="1" id="table">
     <tr>
         <th>Должность</th>
         <th>Оклад*</th>
